--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       Learning
     </div>
     <p id="publish">Published 21 Dec 2023</p>
-    <h2><a id="title" href="">HTML & CSS foundations</a></h2>
+    <h2><a class="title" href="">HTML & CSS foundations</a></h2>
     <p id="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     <div id="author">
       <img id="avatar" src="./assets/images/image-avatar.webp" alt="avatar">
